fix carousel spacing

--- a/app/assets/stylesheets/issue.css.scss
+++ b/app/assets/stylesheets/issue.css.scss
@@ -11,7 +11,7 @@
 }
 
 #carousel {
-    height: 440px;
+    height: 450px;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
@@ -52,7 +52,4 @@
     p:hover {
         text-decoration: underline;
     }
-}
-
-.car img {
 }
